# Django-auth

./: LICENSE  README.md  pyproject.toml
django-auth/authapp/: forms.py  models.py  urls.py  utils.py  views.py
django-auth/authapp/migrations/: 0001_initial.py
django-auth/config/: settings.py  urls.py
django-auth/mainapp/: urls.py  views.py
django-auth/templates/: base.html
django-auth/templates/authapp/registration/: confirmation_email.html  failed_verify_email.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  registration.html  verify_email.html
django-auth/templates/mainapp/: index.html
