[tool.poetry]
name = "django-auth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
crispy-bootstrap5 = "^0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
